# lift-splat-shoot

./: .gitignore  IMPROVEMENTS.md  README.md  README_XFEAT.md  check_box.py  main.py  pyproject.toml  requirements.txt
examples/: network.md  train.md
models/: CamEncoder_3d.py  FusionEncoder.py  RepVit.py  XFeatNet.py  common.py  xfeat_cam_encoder.py  xfeat_extractor.py
src/: data.py  evaluate_3d.py  explore.py  models.py  nuscenes_info.py  test_xfeat.py  tools.py  train.py  vedio_writer.py  vediomaker.py
utils/: CamEncoder_3d.py  MultiModalBEVENet.py
